<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.menu.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_language"
        android:name="com.example.menu.ui.language.LanguageFragment"
        android:label="@string/menu_language"
        tools:layout="@layout/fragment_language" />

    <fragment
        android:id="@+id/nav_bill"
        android:name="com.example.menu.ui.gallery.GalleryFragment"
        android:label="@string/menu_bill"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.menu.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_chart"
        android:name="com.example.menu.ui.chart.ChartFragment"
        android:label="@string/menu_chart"
        tools:layout="@layout/fragment_chart" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.menu.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.menu.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.menu.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.menu.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_password"
        android:name="com.example.menu.ui.password.PasswordFragment"
        android:label="@string/menu_password"
        tools:layout="@layout/fragment_password" />
    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.menu.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_password" />
</navigation>